# soundblaster-katana-ctl

./: .gitignore  README.md  pyproject.toml
homeassistant/: katana.yaml
homebridge-plugin/: package-lock.json
src/katanactl/: __init__.py  api.py  cli.py  commands.py  protocol.py  transport.py  volume.py
systemd/: katanactl-api.service
udev/: 99-katana.rules
